fix: handled the card alignment

--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -142,6 +142,7 @@
                         font-size: 13.5px;
                         color: var(--textColor);
                         font-weight: 500;
+                        min-height: 200px;
                     }
 
                     .btn{
